# SubDivision-agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
adapters/events/: README.md
adapters/events/schemas/: CompsUpdated.v1.json  ScenarioCalculated.v1.json  ZoningEvaluated.v1.json
adapters/persistence/: erd.md  schema.sql
apps/api/: README.md  main.py
apps/api/middleware/: logging.py
apps/api/openapi/: evaluate.v1.yaml  health.v1.yaml
apps/api/routes/: evaluate.py  health.py
apps/web/: README.md  components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/.next/: app-build-manifest.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/worker/: README.md
contracts/api/: evaluate.v1.yaml
contracts/events/: ListingCreated.v1.json
contracts/features/: README.md  definitions.yaml
data/: README.md
data/catalogs/: finance_defaults.yaml  r_codes_wa.csv  wa_stamp_duty_brackets.csv
data/samples/: balga_case02.json  thornlie_case01.json
docs/: glossary.md  non_functional.md  roadmap.md
docs/adr/: ADR-0001-modular-monolith.md  ADR-0002-event-driven-outbox.md  ADR-0003-feature-store.md
docs/flows/: subdivision_flow.md
domain/: README.md
domain/models/: README.md  evaluate.py
domain/services/advice/: README.md
infra/: README.md
infra/compose/: docker-compose.dev.yml
infra/docker/: README.md
infra/k8s/: README.md
scripts/: ci_bootstrap.sh  generate_api_types.sh  lint.sh  validate_contracts.sh
tests/e2e/: test_evaluate_endpoint.py
(+29 files in other folders)
