[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "subdivision-service"
version = "0.0.1"
description = "Subdivision evaluator (modular monolith → microservices-ready)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dmitry & team" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dateutil>=2.9",
  "orjson>=3.10",
  "jsonschema>=4.23",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
dev = "uvicorn apps.api.main:app --reload --port 8080"
test = "pytest -q"
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "mypy ."

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]